# Kvartira

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/: t.json
assets/matilda copy/: scene.gltf
assets/mesh/: 3dCube.json  sprite.json
include/actors/: SpriteA.cpp  SpriteA.h
include/core/: CMakeLists.txt
include/core/actors/: Actor.cpp  Actor.h
include/core/audio/: AudioSystem.h
include/core/components/: Component.cpp  Component.h
include/core/di/: DICore.h  DIObject.h
include/core/ecs/: Component.h  Entity.h  System.h  World.h
include/core/ecs/Components/: CameraComponent.h  MeshComponent.h  RenderComponent.h  TransformComponent.h
include/core/ecs/Components/OpenGL/Mesh/: MeshComponent.h
include/core/ecs/Components/OpenGL/Render/: RenderComponent.h
include/core/ecs/Systems/: MoveSystem.h
include/core/ecs/Systems/Mesh/: RenderMesh2D.h
include/core/ecs/Systems/OpenGL/Mesh/: RenderMesh2D.h  RenderMesh3D.h
include/core/ecs/Systems/OpenGL/Render/: RenderInitSystem.h  RenderSwapSystem.h  RenderSystem.h
include/core/ecs/Systems/Render/: RenderInitSystem.h  RenderSwapSystem.h  RenderSystem.h
include/core/models/GLTF/: GLTF.cpp  GLTF.h  GltfObjects.h
include/core/render/: Render.cpp  Render.h  RenderUtils.h
include/core/render/mesh/: Mesh.cpp  Mesh.h
include/core/render/object/: Primitive.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h
include/core/render/shader/: Shader.cpp  Shader.h
include/core/render/texture/: Texture.cpp  Texture.h
include/core/render/vertexArray/: VertexArray.cpp  VertexArray.h
include/core/services/: InputService.h  ResourcesService.cpp  ResourcesService.h  WindowService.h
include/core/utils/: Base64.h  RapidJsonUtils.h
include/managers/: GameManager.cpp  GameManager.h
include/systems/: MoveCameraSystem.h  RotateCameraSystem.h
shaders/: Sprite.frag  Sprite.vert
src/: main.cpp
